// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Panel__PanelWrapper-sc-48epke-0 kObpyG"
  id="editRoles"
>
  <section
    className="Panel__SectionWrapper-sc-48epke-1 jZYywS"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 bwTAtz"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 hAjMjw"
      >
        <h5
          className="Typography__TitleText-sc-19auepv-2 bKCMpV"
          fontSize="1.15em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Role Permissions
        </h5>
      </div>
    </div>
    <div
      className="Bar__BarLayout-sc-1c4axau-2 xQXbG"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 hAjMjw"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
          id="editRoles_search_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 eYbRbJ"
            cols=""
            disabled={false}
            id="editRoles_search"
            list={null}
            maxLength={null}
            name="editRoles_search"
            onBlur={null}
            onChange={null}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder="Search for a Role"
            rows=""
            size={null}
            title={null}
            type="search"
            value={null}
          />
        </section>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kHYCoh"
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
          disabled={false}
          htmlFor={null}
          id="editRoles_addRole"
          name="editRoles_addRole"
          onClick={null}
          tabIndex="1"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
            id={null}
            rows={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
              fontSize="1em"
              fontWeight={600}
              letterSpacing="0px"
            >
              +Add Role
            </p>
          </section>
        </button>
      </div>
    </div>
  </section>
</div>
`;

exports[` 2`] = `
<div
  className="Panel__PanelWrapper-sc-48epke-0 kObpyG"
  id="editUsers"
>
  <section
    className="Panel__SectionWrapper-sc-48epke-1 jZYywS"
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-2 bwTAtz"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 hAjMjw"
      >
        <h5
          className="Typography__TitleText-sc-19auepv-2 bKCMpV"
          fontSize="1.15em"
          fontWeight={600}
          letterSpacing="0px"
        >
          User Roles
        </h5>
      </div>
    </div>
    <div
      className="Bar__BarLayout-sc-1c4axau-2 xQXbG"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-1 hAjMjw"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
          id="editUsers_search_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 eYbRbJ"
            cols=""
            disabled={false}
            id="editUsers_search"
            list={null}
            maxLength={null}
            name="editUsers_search"
            onBlur={null}
            onChange={null}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder="Search for a User"
            rows=""
            size={null}
            title={null}
            type="search"
            value={null}
          />
        </section>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-1 kHYCoh"
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
          disabled={false}
          htmlFor={null}
          id="editUsers_addUser"
          name="editUsers_addUser"
          onClick={null}
          tabIndex="1"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
            id={null}
            rows={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
              fontSize="1em"
              fontWeight={600}
              letterSpacing="0px"
            >
              +Add User
            </p>
          </section>
        </button>
      </div>
    </div>
  </section>
</div>
`;
